# InkBridge

./: .gitignore  INSTALL.sh  PKGBUILD  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: android-apk.yml  release.yml
inkbridge-android/: .gitignore  LICENSE.txt  PrivacyPolicy.html  build.gradle.kts  settings.gradle.kts
inkbridge-android/app/: build.gradle.kts
inkbridge-android/app/src/main/: AndroidManifest.xml
inkbridge-android/app/src/main/java/com/inkbridge/: BluetoothDevicePickerDialog.kt  BluetoothStreamService.kt  DashboardScreen.kt  DrawingPadScreen.kt  MainActivity.java  MainActivity.kt  MainViewModel.kt  NetworkStreamService.java  NetworkStreamService.kt  OnboardingTutorial.kt  PacketRingBuffer.kt  TouchListener.java  TouchListener.kt  UsbConnectedActivity.java  UsbConnectedActivity.kt  UsbStreamService.java  UsbStreamService.kt  WifiDirectService.kt
inkbridge-android/app/src/main/java/com/virtual_pen/: MainActivity.java  NetworkStreamService.java  TouchListener.java
inkbridge-android/app/src/main/res/drawable/: ic_wordmark.xml
inkbridge-android/app/src/main/res/layout/: activity_main.xml
inkbridge-android/app/src/main/res/values/: strings.xml
inkbridge-android/app/src/main/res/xml/: accessory_filter.xml
inkbridge-android/gradle/: libs.versions.toml
inkbridge-android/gradle/wrapper/: gradle-wrapper.properties
inkbridge-desktop/: .gitignore  CMakeLists.txt  InkBridge  InkBridge.pro  LICENSE.txt  Main.qml  OnboardingTutorial.qml  accessory.cpp  accessory.h  assets.qrc  backend.cpp  backend.h  bluetoothserver.cpp  bluetoothserver.h  constants.h  linux-adk.cpp  linux-adk.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  packetdispatch.h  pressuretranslator.cpp  protocol.h  test_size  test_size.cpp  uinput.c  uinput.h  virtualstylus.cpp  virtualstylus.h  wifidirectserver.cpp  wifidirectserver.h  wifiserver.cpp  wifiserver.h
inkbridge-desktop/assets/: 99-inkbridge.rules  inkbridge.desktop
